--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.ico" />
+    <link rel="icon" type="image/png" href="android-chrome-512x512.png" />
+    <link rel="icon" type="image/png" href="android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" />
+    <link rel="icon" type="image/png" href="apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Hamiti</title>
   </head>
   <body>
     <div id="app"></div>
